# astrbot-wechat-ai-adapter

./: .gitignore  README.md  group_wake.py  main.py  mcp_client.py  metadata.yaml  polling_state.py  pyproject.toml  wechat_ai_platform_adapter.py  wechat_ai_platform_event.py
tests/: test_mcp_client.py  test_polling_state.py
