[project]
name = "astrbot-wechat-ai-adapter"
version = "0.1.1"
description = "AstrBot platform adapter backed by wechat-ai MCP polling"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "httpx>=0.28,<1",
    "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
]

[tool.setuptools]
py-modules = [
    "main",
    "mcp_client",
    "polling_state",
    "wechat_ai_platform_adapter",
    "wechat_ai_platform_event",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
